--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+## v0.0.2 [2015-11-03]
+
+* New Upstream Release and Interface for InfluxDB Telegraf 0.2.0
+
+* Snipplets Mechanism with
+  /etc/opt/telegraf/telegraf.d
+
 ## v0.0.1 [2015-10-01]
 
 * Initial release
