--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+## v0.2.0 [2015-11-09]
+
+* Updated installation manual in README.md -- @rplessl
+* Fix last bits of code coverage -- @rplessl
+* Ready to add plugins for comming releases (v0.2.1++) -- @rplessl
+
 ## v0.1.91 [2015-11-09]
 
 * More Rake Tasks -- @rplessl
