--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
+## v0.13.1 [2015-06-xx]
+
+* Enhanced for working with telegraf 0.13.x -- @thirdeyenick and @rplessl
+
 ## v0.2.4 [2015-12-25]
 
-* Enhanced documenttion for using pulgins (Closes #16, #17) -- @rplessl
+* Enhanced documention for using pulgins (Closes #16, #17) -- @rplessl
 * Enhanced for puppet 4 compatiblity (closes #15) -- @rplessl
 * Changed puppet module to parameterization -- Thanks @ntent-ashton!
 * Added Elasticsearch plugin -- Thanks @ntent-ashton!
