--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
-## v0.13.1 [2015-06-20]
+## v0.13.2 [2016-06-21]
+
+* fixing plugin inclusion -- @rplessl
+* fixing linter errors -- @rplessl
+
+## v0.13.1 [2016-06-20]
 
 * Enhanced for working with telegraf 0.13.x -- @thirdeyenick and @rplessl
 * Refactoring plugin system (closes #23) -- @rplessl
